Ajustar desenho da API e implementar serviço de pedidos
Realizar ajustes no desenho da API; implementar rotinas de inserção, atualização e exclusão de pedidos.
